fixed the overlay buttons to not overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -747,7 +747,13 @@ form legend {
 
     .overlay-buttons {
         width: 90%;
-        height: auto;
+        height: 40px;
+        clear: both;
+    }
+
+    .overlay-buttons h2{
+        height: max-content;
+        margin: 0;
     }
 
     #overlay-gallery {
